# iacs-sentiometer-study

./: .gitignore  ACTION_PLAN.md  CLAUDE.md  PSG_ANALYSIS_GUIDE.md  README.md  launch.bat  launch.command  launch_visualizer.command  pyproject.toml  sentiometer-stream.bat  sentiometer-stream.cmd  sentiometer-stream.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
Launch P013.app/Contents/: Info.plist
Launch P013.app/Contents/MacOS/: run
Launch P013.app/Contents/_CodeSignature/: CodeDirectory
Reference/: 64 Channel Default 2021 Workspace - USE THIS ONE FOR 64 - 2026.rwksp  Brain Amp Series Connector Configuration File - USE THIS ONE FOR 64 - 2026.cfg
config/: psg_mapping.yaml  session_defaults.yaml
scripts/: diagnose_serial.py  generate_hybrid_masks.py  generate_mondrians.py  generate_tones.py  mac_visualizer.py  run_task03_diagnostic.py  start_stream.py  timeline_xdf.py  validate_setup.py  verify_xdf.py  xdf_to_edf.py
scripts/xdf_to_edf/: 01_inspect.py  01b_spectral.py  02_convert.py  03_manifest.py  04_niccotest_report.py  _common.py  _report_helpers.py  run_all.py
share/sentiometer-visualizer/: READ ME FIRST.txt  Sentiometer Visualizer.command  sentiometer.yaml  sentiometer_viz.py
src/sentiometer/: __init__.py  cli.py  guided.py  stream.py
src/tasks/: gui_launcher.py  launcher.py
src/tasks/00_questionnaire/: __init__.py  task.py
src/tasks/01_oddball/: config.yaml  task.py
src/tasks/02_rgb_illuminance/: config.yaml  task.py
src/tasks/03_backward_masking/: config.yaml  task.py
src/tasks/03_backward_masking/stimuli/: README.md
src/tasks/03_backward_masking/stimuli/faces/: .gitkeep
src/tasks/04_mind_state/: config.yaml  game.py  meditation.py  task.py
src/tasks/05_ssvep/: config.yaml  task.py  vayl_lsl_bridge.py
src/tasks/common/: __init__.py  audio.py  config.py  display.py  instructions.py  lsl_markers.py
tests/: mock_serial.py  test_launcher.py  test_markers.py  test_stream.py  test_task00_questionnaire.py  test_task01_oddball.py  test_task02_rgb_illuminance.py  test_task03_backward_masking.py  test_task04_mind_state.py  test_task05_ssvep.py  test_task_configs.py
