[project]
name = "iacs-sentiometer-study"
version = "0.1.0"
description = "IACS Sentiometer validation study: LSL streaming, experimental tasks, and data collection"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Nicco Reggente", email = "nicco@iacscience.org" },
]

dependencies = [
    "pyserial>=3.5",
    "pylsl>=1.16.2",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    # verify_xdf.py uses pyxdf to inspect recorded sessions;
    # xdf_to_edf.py writes EDF+ for collaborators who work in EDF (e.g.
    # Dr. Paller's sleep-scoring pipeline).
    "pyxdf>=1.16",
    "numpy>=1.26",
    "pyedflib>=0.1.38",
    # PDF manifest for the Paller PSG handoff bundle (scripts/xdf_to_edf/).
    "reportlab>=4.0",
    # BrainVision .rwksp cross-check in scripts/xdf_to_edf/01_inspect.py.
    "olefile>=0.47",
]
viz = [
    # Live signal visualizer (scripts/mac_visualizer.py). Tk backend so we
    # don't pull in Qt — Tk ships with the system Python on macOS.
    "matplotlib>=3.8",
]
tasks = [
    "psychopy>=2024.1",
    "pygame>=2.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    # PsychoPy's metadata allows pyobjc 7.3, which predates Apple Silicon / Python 3.11
    # wheels and fails to build from source against modern clang. Force a modern pyobjc
    # so uv installs prebuilt wheels.
    'pyobjc>=10; sys_platform == "darwin"',
    # Task 00 embeds the Google Form in a native webview so the participant
    # can fill out the questionnaire without the RA in the room. macOS uses
    # the system WKWebView (no extra runtime to install).
    "pywebview>=5.0",
]

# PsychoPy pins pyglet==1.5.27 on macOS, but that version's Cocoa bridge
# crashes on Apple Silicon with modern pyobjc (NSSingleObjectArrayI has no
# attribute initWithAttributes_). 1.5.31 patched the bridge. We override
# psychopy's pin on darwin only (Windows stays on pyglet==1.4.11 per
# psychopy's metadata).
[tool.uv]
override-dependencies = [
    'pyglet>=1.5.31,<2; sys_platform == "darwin"',
]

[project.scripts]
sentiometer = "sentiometer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentiometer", "src/tasks"]

# pyobjc 7.3 (pulled in by psychopy) has a setup.py that imports pkg_resources,
# which was removed from setuptools 81+. Pin setuptools<81 in the build env for
# every affected package so their setup scripts can still import pkg_resources.
[tool.uv.extra-build-dependencies]
pyobjc = ["setuptools<81"]
pyobjc-core = ["setuptools<81"]
pyobjc-framework-cocoa = ["setuptools<81"]
pyobjc-framework-coretext = ["setuptools<81"]
pyobjc-framework-security = ["setuptools<81"]
pyobjc-framework-applicationservices = ["setuptools<81"]
pyobjc-framework-coremedia = ["setuptools<81"]
pyobjc-framework-coreaudio = ["setuptools<81"]
pyobjc-framework-fileprovider = ["setuptools<81"]
pyobjc-framework-libdispatch = ["setuptools<81"]
pyobjc-framework-quartz = ["setuptools<81"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored third-party scripts we do not own or modify.
extend-exclude = ["src/tasks/05_ssvep/vayl_lsl_bridge.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
